--- a/woniu/src/cart.html
+++ b/woniu/src/cart.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        .box {
+        .listitem {
             width: 1200px;
-            height: 300px;
+            height: 150px;
             margin:  0  auto;
         }
        table{
@@ -22,13 +22,13 @@
        a{
            cursor: pointer;
            color: red
-       }
+       }    
     </style>
 </head>
 
 <body>
-    <div class="box">
-        <table>
+    <div class="listitem">
+        <!-- <table>
             <tr>
                 <td>商品图</td>
                 <td>标题</td>
@@ -49,8 +49,11 @@
                 <td>￥500</td>
                 <td><a>删除</a></td>
             </tr>
-        </table>
+        </table> -->
     </div>
+    <script src="../src/script/ajax1.js"></script>
+    <script src="../src/script/cookie.js"></script>
+    <script src="../src/script/cart.js"></script>
 </body>
 
 </html>
