--- a/woniu/src/login.html
+++ b/woniu/src/login.html
@@ -27,6 +27,7 @@
         </div>
         
     </div>
+    <script src="../src/script/thirdplugins/jquery-1.8.3.js"></script> 
     <script src="../src/script/ajax.js"></script>
     <script src="../src/script/login.js"></script>
 </body>
