--- a/woniu/src/registor.html
+++ b/woniu/src/registor.html
@@ -84,7 +84,7 @@
             Copyright@ 2010-2014 Snail Inc. 保留所有权利苏ICP备08012323号-6
         </p>
     </div>
-  <!-- <script src="../src/script/thirdplugins/jquery-1.8.3.js"></script>     -->
+  <script src="../src/script/thirdplugins/jquery-1.8.3.js"></script>    
   <script src="../src/script/ajax.js"></script>
   <script src="../src/script/res.js"></script>
 </body>
