--- a/woniu/src/woniu.html
+++ b/woniu/src/woniu.html
@@ -351,13 +351,16 @@
 				<a class="prop-slide-btn prop-slide-btn-right"></a>
 				<!--<div class="prop-modal prop-modal-left"></div>
 					<div class="prop-modal prop-modal-right"></div>-->
-				<div class="prop-slide-page"><a href="#" class="active"></a><a href="#" class=""></a></div>
+				<div class="prop-slide-page">
+					<a class="active"></a>
+					<a class=""></a>
+				</div>
 			</div>
 		</div>
 		<div class="prop-rqdp">
 			<div class="prop-rqdp-container">
 				<!-- 人气单品 164*164 -->
-				<a target="_blank" href="" class="prop-rqdp-product">
+				<!-- <a target="_blank" href="" class="prop-rqdp-product">
 					<img src="../src/img/0yuezu.jpg">
 					<div class="prop-rqdp-product-name">30免卡（0月租0低消）</div>
 					<div class="prop-rqdp-product-price">0.00元</div>
@@ -372,15 +375,15 @@
 					<div class="prop-rqdp-product-name">九阴真经-神机营/高清原画海报</div>
 					<div class="prop-rqdp-product-price">29.00元</div>
 				</a>
-				<a target="_blank" href="" class="prop-rqdp-product">
-					<img src="../src/img/long.jpg">
+				<a target="_blank" href="details.html" class="prop-rqdp-product">
+					<img src="../src/img/goods.jpg">
 					<div class="prop-rqdp-product-name">《黑暗与光明》2018纪念款T恤</div>
 					<div class="prop-rqdp-product-price">98.00元</div>
 				</a>
 				<div class="prop-rqdp-tip">
 					<span>人气<br>单品</span>
-					<img src="">
-				</div>
+					<img src="http://static.snail.com/images/prop/rqdp.png">
+				</div> -->
 			</div>
 		</div>
 		<div class="prop-yxdj">
@@ -895,6 +898,8 @@
         </div>
     </div>
 </div>
+<script src="../src/script/thirdplugins/jquery-1.8.3.js"></script>
+<script src="../src/script/woniu.js"></script>
 <script>
 	const admin = document.querySelector('.admin');
 	const login = document.querySelector('.loginlater');
