--- a/woniu/src/cart.html
+++ b/woniu/src/cart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>购物车</title>
     <style>
         .listitem {
             width: 1200px;
@@ -28,7 +28,7 @@
 
 <body>
     <div class="listitem">
-        <!-- <table>
+         <!-- <table>
             <tr>
                 <td>商品图</td>
                 <td>标题</td>
@@ -49,8 +49,10 @@
                 <td>￥500</td>
                 <td><a>删除</a></td>
             </tr>
-        </table> -->
+        </table>  -->
     </div>
+   
+    
     <script src="../src/script/ajax1.js"></script>
     <script src="../src/script/cookie.js"></script>
     <script src="../src/script/cart.js"></script>
